infra/qsb/k8s/apps/downloads/freyrarr/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: freyrarr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: freyrarr
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: lidarr
      toPorts:
        - ports:
            - port: '8686'
              protocol: TCP
